Added log for monday week 9, made plan for week 9 - 10 and made minor changes to the plan for week 7 - 8 + minor changes to the frontpage

--- a/config.yaml
+++ b/config.yaml
@@ -35,7 +35,9 @@ params:
   homeInfoParams:
     Title: "Hi, \U0001F44B"
     Content: |
-      Portefølje for 4.Semester.
+      Her er min portefølje for 4. semester, hvor jeg vil dokumentere hele mit forløb med mine valgfag: webudvikling med Laravel og appudvikling med Flutter.
+      
+      Det vil blive ført en daglig log, som kan ses [her](/log), og de løbende læringsmål samt læringsplanen kan ses [her](/plan).
 
       Her ses en overordnet plan for hver uge. Den kan dog variere uge for uge.
 
